--- a/README.tex
+++ b/README.tex
@@ -1,4 +1,4 @@
-% Created 2023-08-29 火 17:12
+% Created 2023-08-30 水 10:45
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt]{article}
 \usepackage[utf8]{inputenc}
@@ -28,8 +28,8 @@
 \usepackage{float}
 \newcommand{\gitlab}[1]{%
 \href{#1}{GitLab \faGitlab}}
-\author{Vincent Conus}
-\date{2023-8-24}
+\author{Vincent Conus\thanks{vincent.conus@protonmail.com}}
+\date{2023-8-30}
 \title{Setting up and using Xilinx KRIA KV260\\\medskip
 \large \begin{CJK}{UTF8}{min}南山大学\end{CJK}}
 \hypersetup{
@@ -47,7 +47,7 @@
 \vspace{5mm}
 {\large \begin{CJK}{UTF8}{min}南山大学\end{CJK} \par}
 \vspace{1cm}
-{\large 2023-8-24 \par}
+{\large 2023-8-30 \par}
 \vspace{2cm}
 {\large Vincent Conus -  Source available at \gitlab{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation} \par}
 \vspace{3cm}
@@ -55,7 +55,7 @@
 \tableofcontents
 \pagebreak
 \section{Introduction \& motivation}
-\label{sec:org363fbb7}
+\label{sec:org0d25999}
 This guide will present how to setup and use Xilinx's KRIA board, in particular
 for running ROS on a host Ubuntu system, as well as for deploying
 micro-ROS as a firmware on the MCU part of this board's chip.
@@ -66,9 +66,10 @@ a Linux distribution, as well as another ARM core, real-time enabled,
 capable to run a RTOS.
 
 \section{Boot firmware}
-\label{sec:org54915a9}
+\label{sec:orgbe69aa4}
 The goal for the Linux side of the deployment is to
 have the latest LTS version of Ubuntu up and running.
+
 In order to be able to boot such a newer version of Linux, the
 boot image of the board must first be updated.
 
@@ -76,7 +77,7 @@ The procedure is available in \href{https://docs.xilinx.com/r/en-US/ug1089-kv260
 but I will present it step by step here.
 
 \subsection{Getting the new firmware}
-\label{sec:org1c03638}
+\label{sec:org3342733}
 A 2022 version of the board firmware is required in order to run the latest
 version of Ubuntu properly.
 
@@ -90,7 +91,7 @@ wget https://www.xilinx.com/member/forms/download/\
 
 
 \subsection{Reaching the board recovery tool}
-\label{sec:org5a15ab0}
+\label{sec:org9274fb4}
 Now the firmware \texttt{.bin} image is available, it is possible to update it using the
 boards recovery tool. Here are the steps that must be taken in order to reach
 this tool and update the board:
@@ -105,30 +106,32 @@ range, except the specific \texttt{192.168.0.111}, which will be used by the
 board.
 \item Using a web browser on your host machine, access
 \texttt{http://192.168.0.111}. Thou shall now see the interface, as visible on
-the figure \ref{fig:orgd39eadd} below.
+the figure \ref{fig:org3a2ee8d} below.
 \end{itemize}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=1\textwidth]{img/recovery.png}
-\caption{\label{fig:orgd39eadd}The recovery tool for the board, access from Firefox. We can see board information at the center, and the tools to upload the firmware at the bottom of the page.}
+\caption{\label{fig:org3a2ee8d}The recovery tool for the board, access from Firefox. We can see board information at the center, and the tools to upload the firmware at the bottom of the page.}
 \end{figure}
 
 \subsection{Updating the boot firmware}
-\label{sec:org4ae6ff4}
+\label{sec:org71435c8}
 From this "recovery" page, it is possible to upload the \texttt{.bin} file downloaded previously onto
 the board using the "Recover Image" section at the bottom right of the page.
 
 The board can be re-booted afterwards.
 
 \section{Installing Linux}
-\label{sec:org1ccbc9e}
+\label{sec:org372310a}
 Withe the boot firmware being up-to-date, we can proceed to install a Linux distribution
-on our Kria board. The step needed to archive a full installation of Ubuntu 22.04
-will be presented in this section.
+on our Kria board. The step needed to archive a full installation of Ubuntu LTS 22.04
+will be presented in this section\footnote{The same procedure should work for other versions of Ubuntu, as long as they
+support the Kria board, but for this report and project, only the LTS 22.04 was tested
+(as of 2023-08-30).}.
 
 \subsection{Preparing and booting a Ubuntu 22.04 media}
-\label{sec:org0c0e148}
+\label{sec:orgf5022ba}
 An \href{https://ubuntu.com/download/amd-xilinx}{official Ubuntu image} exists and is
 provided by Xilinx, allowing the OS installation to be quick and
 straightforward.
@@ -172,12 +175,12 @@ host# ssh ubuntu@192.168.4.11
 \end{minted}
 
 \subsection{Network and admin setups}
-\label{sec:org0e04853}
+\label{sec:org1505ba8}
 This section presents a variety of extra convenience configurations
 that can be used when setting-up the Kria board.
 
 \subsubsection{Proxy and DNS}
-\label{sec:orge7a7828}
+\label{sec:orgfe9e3e3}
 An issue that can occur when connecting the board to the internet is the
 conflicting situation with the university proxy.
 Indeed, as the network at Nanzan University requires to go through a proxy,
@@ -213,7 +216,7 @@ echo "export http_proxy=\""$https_proxy"\"" >> ~/.bashrc \
 Eventually the board can be rebooted in order for the setup to get applied cleanly.
 
 \subsubsection{\texttt{root} password}
-\label{sec:org7f641d8}
+\label{sec:orgb8ed835}
 \begin{tcolorbox}[colback=orange!5!white,colframe=orange!75!black]
 \textbf{WARNING}: Depending on your use-case, the setup presented in this
 subsection can be a critical security breach as it remove the need for a root
@@ -249,7 +252,7 @@ sudo reboot now
 
 
 \subsubsection{Static IP address}
-\label{sec:orgfb72bb0}
+\label{sec:org06e68d7}
 A static IP can be set by writing the following
 configuration into your \texttt{netplan} configuration file.
 
@@ -285,7 +288,7 @@ sudo netplan apply
 \end{minted}
 
 \subsubsection{Purging \texttt{snap}}
-\label{sec:org954490a}
+\label{sec:org527dc5a}
 As the desktop-specific software are not used at all in the case
 of our project, there are some packages that can be purges in order for the
 system to become more lightweight.
@@ -322,7 +325,7 @@ systemctl list-units | grep snapd
 \end{minted}
 
 \subsubsection{Other unused heavy packages}
-\label{sec:org664fe94}
+\label{sec:org3a064ba}
 Some other pieces of software can safely be removed since the desktop is
 not to be used:
 
@@ -336,7 +339,7 @@ sudo reboot now
 \end{minted}
 
 \section{Enabling \texttt{remoteproc}}
-\label{sec:orgd814eab}
+\label{sec:org59de9bd}
 One of the advantage of this Kria board, as cited previously, is the presence of
 multiple types of core (APU, MCU, FPGA) on the same chip.
 
@@ -358,7 +361,7 @@ will present how to setup and use as an example firmware that utilizes the
 and communicate with the real-time firmware using the RPMsg system.
 
 \subsection{Device-Tree Overlay patching}
-\label{sec:orge2e9001}
+\label{sec:org220404f}
 The communication system and interaction from the Linux side towards the real-time capable core
 is not enabled by default within the Ubuntu image provided by Xilinx.
 
@@ -374,7 +377,7 @@ sudo dtc /sys/firmware/fdt 2> /dev/null > system.dts
 
 Then, a custom-made patch file can be downloaded and applied.
 This file is available at the URL visible in the command below
-but also in this report appendix \ref{sec:orgf1db9a6}.
+but also in this report appendix \ref{sec:orgc249152}.
 
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
 wget https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/\
@@ -416,7 +419,7 @@ If it is the case, it means that the patch was successful and  that the remote p
 ready to be used!
 
 \section{Building an example RPMsg real-time firmware}
-\label{sec:orgb786896}
+\label{sec:org95de5f8}
 As visible on the official \href{https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/1837006921/OpenAMP+Base+Hardware+Configurations\\\#Build-RPU-firmware}{Xilinx documentation about building a demo firmware},
 this section will present the required steps for building a new firmware for the R5F
 core of our Kria board.
@@ -425,7 +428,7 @@ The goal here is to have a demonstration firmware running,
 able to use the RPMsg system to communicate with the Linux APU.
 
 \subsection{Setting up the IDE}
-\label{sec:orgf0c28dd}
+\label{sec:org4283e26}
 Xilinx's Vitis IDE is the recommended tool used to build software for the Xilinx boards.
 It also include the tools to interact with the FPGA part, making the whole
 software very large (around 200GB of disk usage).
@@ -447,7 +450,7 @@ This guide will present a setup procedure that supposedly works for all distribu
 LTS from Ubuntu. For other Linux distributions or operating system, please refer to the official documentation.
 
 \subsubsection{Dependencies \& installation}
-\label{sec:orga62ed7c}
+\label{sec:org800d93b}
 Some packages are required to be installed on the host system
 in order for the installation process to happen successfully:
 
@@ -487,12 +490,12 @@ so your schedule should be arranged accordingly.
 \end{tcolorbox}
 
 \subsubsection{Platform configuration file generation}
-\label{sec:org7ad0300}
+\label{sec:orgf30e12a}
 In order to have the libraries and configurations in the IDE ready to be used for our board,
 we need to obtain some configuration files that are specific for the Kria KV260,
 as presented in the \href{https://xilinx.github.io/kria-apps-docs/kv260/2022.1/build/html/docs/build\_vitis\_platform.html?highlight=xsa}{Xilinx guide for Kria and Vitis}.
 
-A Xilix \href{https://github.com/Xilinx/kria-vitis-platforms}{dedicated repository} is available for us to download  such configurations,
+A Xilinx \href{https://github.com/Xilinx/kria-vitis-platforms}{dedicated repository} is available for us to download  such configurations,
 but they required to be built.
 
 As for the dependencies, \texttt{Cmake}, \texttt{tcl} and \texttt{idn} will become needed in order to build the firmware.
@@ -520,7 +523,7 @@ make platform PLATFORM=k26_base_starter_kit
 
 
 \subsection{Setting up and building a new project for the Kria board}
-\label{sec:orga174917}
+\label{sec:org144d245}
 With the platform configuration files available, we can now use the IDE to generate a
 new project for our board. The whole process will be described with screen captures and
 captions.
@@ -528,43 +531,43 @@ captions.
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.5\textwidth]{./img/vitis_new/project1.png}
-\caption{\label{fig:org18cec81}We are starting with creating a "New Application Project" You should be greeted with this wizard window. Next.}
+\caption{\label{fig:orgd42161d}We are starting with creating a "New Application Project" You should be greeted with this wizard window. Next.}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.5\textwidth]{./img/vitis_new/project2.png}
-\caption{\label{fig:orgbb6ade9}For the platform, we need to get our build Kria configuration. In the "Create a new platform" tab, click the "Browse\ldots{}" button.}
+\caption{\label{fig:org7d91a95}For the platform, we need to get our build Kria configuration. In the "Create a new platform" tab, click the "Browse\ldots{}" button.}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project3.png}
-\caption{\label{fig:orgcfb9d9f}In the file explorer, we should navigate in the "k26" directory, where the configuration file was build. From here we are looking for a ".xsa" file, located in a "hw" directory, as visible.}
+\caption{\label{fig:orgbd222ab}In the file explorer, we should navigate in the "k26" directory, where the configuration file was build. From here we are looking for a ".xsa" file, located in a "hw" directory, as visible.}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project4.png}
-\caption{\label{fig:org3f5c3be}With the configuration file loaded, we can now select a name for our platform, but most importantly, we have to select the "psu Cortex5 0" core as a target. The other, Cortex 53 is the APU running Linux.}
+\caption{\label{fig:orga3b6aa8}With the configuration file loaded, we can now select a name for our platform, but most importantly, we have to select the "psu Cortex5 0" core as a target. The other, Cortex 53 is the APU running Linux.}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project5.png}
-\caption{\label{fig:org88f936d}In this next window, we can give a name to our firmware project. It is also critical here to select the core we want to build for. Once again, we want to use the "psu cortex5 0".}
+\caption{\label{fig:orgcca90e2}In this next window, we can give a name to our firmware project. It is also critical here to select the core we want to build for. Once again, we want to use the "psu cortex5 0".}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project6.png}
-\caption{\label{fig:orgadbe7bd}Here, we want to select "freertos10 xilinx" as our Operating System. The rest can remain unchanged.}
+\caption{\label{fig:orgebec082}Here, we want to select "freertos10 xilinx" as our Operating System. The rest can remain unchanged.}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project7.png}
-\caption{\label{fig:org04a5a70}Finally, we can select the demonstration template we are going to use; here we go with "OpenAMP echo-test" since we want to have some simple try of the RPMsg system. Finish.}
+\caption{\label{fig:org0aeb9fc}Finally, we can select the demonstration template we are going to use; here we go with "OpenAMP echo-test" since we want to have some simple try of the RPMsg system. Finish.}
 \end{figure}
 
 \pagebreak
@@ -582,14 +585,8 @@ psu_r5_tcm_ram_1_S_AXI_BASEADDR    0x00020000
 
 
 \pagebreak
-\section{Building a real-time firmware}
-\label{sec:org8b58b57}
-
-\subsection{Setting up Vitis IDE}
-\label{sec:org505cbd8}
-
 \section{RPMsg \texttt{echo\_test} software}
-\label{sec:orgca792f3}
+\label{sec:orgb05d700}
 In order to test the deployment of the firmware on the R5F side, and in particular
 to test the RPMsg function, we need some program on the Linux side of the Kria
 board to "talk" with the real-time side.
@@ -615,9 +612,22 @@ Once this is done, it it possible to run the test program from the Kria board's 
 by running the \texttt{echo\_test} command.
 
 \section{Building micro-ROS as a static library}
-\label{sec:org6891b4e}
+\label{sec:orga132a8f}
+In this section, the goal is to build the micro-ROS library in order to be
+able to integrate it's functions into our Cortex R5F firmware.
 
+All of this should be done via cross-compiling on a host machine, however
+it is most common in the guides about micro-ROS to build the firmwares and libraries within a Docker,
+so we can have access of the ROS environment without installing it permanently.
 
+One can simply run this command to summon a ROS2 Docker\footnote{If Docker is not set up on your machine, you can follow the guide on \href{https://docs.docker.com/engine/install/ubuntu/}{the official website}.
+When you can successfully run the "hello-world" container, you are good to go.} with the wanted version,
+but first we also need to check the cross-compilation tools.
+
+We are downloading the latest \texttt{arm-none-eabi} gcc compiler directly from the ARM website.
+
+The cross-compilation tool can then be extracted, set as our \texttt{toolchain} variable,
+then passed as a parameter when creating the Docker container:
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
 pushd /home/$USER/Downloads
 wget https://developer.arm.com/-/media/Files/downloads/\
@@ -636,58 +646,110 @@ docker run -d --name ros_build -it --net=host \
 -v /dev:/dev \
 -v $toolchain:/armr5-toolchain \
 --privileged ros:iron
+\end{minted}
 
+Now the container named "ros build" was created, it is possible to "enter" it, and having access
+to the tools in it by running the following command that will open a \texttt{bash} shell in said container:
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
 docker exec -it ros_build bash
 \end{minted}
 
-\section{Adding micro-ROS to a firmware project}
-\label{sec:org5b464de}
+Now we are in the ROS2 container, we can build the micro-ROS firmware as presented
+in the \href{https://micro.ros.org/docs/tutorials/advanced/create\\\_custom\\\_static\\\_library}{dedicated micro-ROS guide}:
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+sudo apt update 
+sudo apt-get -y install python3-pip \
+     wget \
+     nano
 
-\section{Loading a real-time firmware}
-\label{sec:orgd8f92b8}
+. /opt/ros/\$ROS_DISTRO/setup.bash
+
+mkdir microros_ws
+cd microros_ws
+git clone -b \$ROS_DISTRO \
+    https://github.com/micro-ROS/micro_ros_setup.git \
+    src/micro_ros_setup
+
+sudo rosdep fix-permissions &&\
+    rosdep update &&\
+    rosdep install --from-paths src --ignore-src -y
+
+colcon build
+. ./install/local_setup.bash
+
+ros2 run micro_ros_setup create_firmware_ws.sh generate_lib
+\end{minted}
+
+From that point, we will need some extra configuration files for our Cortex R5F.
+
+Both configuration files\footnote{Both files are also visible in the appendixes \ref{sec:orgffeb516}
+and \ref{sec:org7ca4aa4} the end of this report.\}} will be downloaded from my repository;
+we also are going to copy the cross-compiler into the microros workspace,
+then we can build the library with the following ros2 command:
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+wget https://gitlab.com/sunoc/xilinx-kria-kv260-\
+documentation/-/raw/main/src/custom_r5f_toolchain.cmake
+
+wget https://gitlab.com/sunoc/xilinx-kria-kv260-\
+documentation/-/raw/main/src/custom_r5f_colcon.meta
+
+cp -r /armr5-toolchain/ \$(pwd)/firmware/toolchain && \
+export PATH=\$PATH:\$(pwd)/firmware/toolchain/bin
+
+ros2 run micro_ros_setup build_firmware.sh \
+\$(pwd)/custom_r5f_toolchain.cmake \$(pwd)/\
+custom_r5f_colcon.meta
+\end{minted}
+
+
+\section{Adding micro-ROS to the real-time firmware}
+\label{sec:org75fca6c}
+
+\section{Loading the firmware}
+\label{sec:org93cbd7a}
 
 \section{Running a ROS2 node}
-\label{sec:org3e74ac3}
+\label{sec:orgaebb96f}
 
 \subsection{On the host Linux}
-\label{sec:org5595693}
+\label{sec:org9a58c0e}
 
 \subsection{In a container}
-\label{sec:orga452249}
+\label{sec:org455f17f}
 
 \section{micro-ROS agent}
-\label{sec:orga0f82bd}
+\label{sec:orge9b72c8}
 
 \pagebreak
 \appendix
 \section{DTO patch}
-\label{sec:orgf1db9a6}
+\label{sec:orgc249152}
 This file is available in this repository: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/system.patch}{system.patch}
 \inputminted[linenos, frame=single]{diff}{./src/system.patch}
 
 \pagebreak
 \section{Custom toolchain CMake settings}
-\label{sec:org7640972}
+\label{sec:orgffeb516}
 This file is available in this repository: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/custom\_r5f\_toolchain.cmake}{custom r5f toolchain.cmake}
 \inputminted[linenos, frame=single]{cmake}{./src/custom_r5f_toolchain.cmake}
 
 \pagebreak
 \section{Custom Colcon meta settings}
-\label{sec:orgbbc3767}
+\label{sec:org7ca4aa4}
 This file is available in this repository: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/custom\_r5f\_colcon.meta}{custom r5f colcon.meta}
 \inputminted[linenos, frame=single]{yaml}{./src/custom_r5f_colcon.meta}
 
 \pagebreak
 \section{Firmware time functions}
-\label{sec:orgbd9cbf2}
+\label{sec:orga018ee5}
 
 \subsection{main}
-\label{sec:org4422d2f}
+\label{sec:org7131409}
 This file is available in this repository: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/clock.c}{clock.c}
 \inputminted[linenos, frame=single]{c}{./src/clock.c}
 
 \subsection{header file}
-\label{sec:org3ea11dc}
+\label{sec:orga10d592}
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{c}
 /**< Microseconds per second. */
 #define MICROSECONDS_PER_SECOND    ( 1000000LL )  
@@ -700,15 +762,15 @@ This file is available in this repository: \href{https://gitlab.com/sunoc/xilinx
 
 \pagebreak
 \section{Firmware memory allocation functions}
-\label{sec:orgfa6dba0}
+\label{sec:orgd5dd064}
 
 \subsection{main}
-\label{sec:org37c4872}
+\label{sec:org96229db}
 This file is available in this repository: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/allocators.c}{allocators.c}
 \inputminted[linenos, frame=single]{c}{./src/allocators.c}
 
 \subsection{header file}
-\label{sec:org572f81b}
+\label{sec:orge1dad63}
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{c}
 #ifndef _ALLOCATORS_H_
 #define _ALLOCATORS_H_
