--- a/instructions.tex
+++ b/instructions.tex
@@ -449,99 +449,99 @@
 % \end{minted}
 % \end{tcolorbox}
 
-% ------------------------------------------------------------------------------
-\section{Building the micro-ROS static library}
-%\label{sec:building-micro-ros}
-In this section, the goal is to build the micro-ROS library in order to be
-able to integrate the micro-ROS function into our Cortex R5F firmware.
-All of this should be done via cross-compiling on a host machine, however
-it is most common in the guides about micro-ROS to build the firmwares and libraries within a Docker,
-so we can have access of the ROS environment without installing it on my machine.
-One can simply run this command to summon a ROS2 Docker\footnote{If Docker is not set up on your machine, you can follow the guide on \href{https://docs.docker.com/engine/install/ubuntu/}{the official website}. When you can successfully run the ``hello-world'' container, you are good to go.} with the wanted version, but first we also need to check the cross-compilation tools.
+% % ------------------------------------------------------------------------------
+% \section{Building the micro-ROS static library}
+% %\label{sec:building-micro-ros}
+% In this section, the goal is to build the micro-ROS library in order to be
+% able to integrate the micro-ROS function into our Cortex R5F firmware.
+% All of this should be done via cross-compiling on a host machine, however
+% it is most common in the guides about micro-ROS to build the firmwares and libraries within a Docker,
+% so we can have access of the ROS environment without installing it on my machine.
+% One can simply run this command to summon a ROS2 Docker\footnote{If Docker is not set up on your machine, you can follow the guide on \href{https://docs.docker.com/engine/install/ubuntu/}{the official website}. When you can successfully run the ``hello-world'' container, you are good to go.} with the wanted version, but first we also need to check the cross-compilation tools.
 
-We are downloading the latest \verb|arm-none-eabi| gcc compiler directly \\from the ARM website.
-The cross-compilation tool can then be extracted, set as our ``toolchain'' variable, then passed as a parameter when creating the Docker container.
-Here is how to do all of this and then opening a \verb|bash| shell in the container:
-\begin{tcolorbox}
-\begin{minted}{sh}
-pushd /home/\$USER/Downloads
-wget https://developer.arm.com/-/media/Files/downloads/\
-gnu/12.2.mpacbti-rel1/binrel/arm-gnu-toolchain-12.2\
-.mpacbti-rel1-x86_64-arm-none-eabi.tar.xz
-tar -xvf arm-gnu-toolchain-12.2.mpacbti-rel1-x86_64-\
-arm-none-eabi.tar.xz
-popd
+% We are downloading the latest \verb|arm-none-eabi| gcc compiler directly \\from the ARM website.
+% The cross-compilation tool can then be extracted, set as our ``toolchain'' variable, then passed as a parameter when creating the Docker container.
+% Here is how to do all of this and then opening a \verb|bash| shell in the container:
+% \begin{tcolorbox}
+% \begin{minted}{sh}
+% pushd /home/\$USER/Downloads
+% wget https://developer.arm.com/-/media/Files/downloads/\
+% gnu/12.2.mpacbti-rel1/binrel/arm-gnu-toolchain-12.2\
+% .mpacbti-rel1-x86_64-arm-none-eabi.tar.xz
+% tar -xvf arm-gnu-toolchain-12.2.mpacbti-rel1-x86_64-\
+% arm-none-eabi.tar.xz
+% popd
 
-toolchain="/home/\$USER/Downloads/arm-gnu-toolchain-\
-12.2.mpacbti-rel1-x86_64-arm-none-eabi/"
-
-
-docker run -d --name ros_build -it --net=host \
---hostname ros_build \
--v /dev:/dev \
--v \$toolchain:/armr5-toolchain \
---privileged ros:iron
-
-docker exec -it ros_build bash
-\end{minted}
-\end{tcolorbox}
+% toolchain="/home/\$USER/Downloads/arm-gnu-toolchain-\
+% 12.2.mpacbti-rel1-x86_64-arm-none-eabi/"
 
 
-Now we are in the ROS2 container, we can build the micro-ROS firmware as presented in the \href{https://micro.ros.org/docs/tutorials/advanced/create\_custom\_static\_library}{dedicated micro-ROS guide}:
-\begin{tcolorbox}
-\begin{minted}{sh}
-sudo apt update && \
-sudo apt-get -y install python3-pip \
-                        wget \
-                        nano
-\end{minted}
-\end{tcolorbox}
+% docker run -d --name ros_build -it --net=host \
+% --hostname ros_build \
+% -v /dev:/dev \
+% -v \$toolchain:/armr5-toolchain \
+% --privileged ros:iron
 
-\begin{tcolorbox}
-\begin{minted}{sh}
-. /opt/ros/\$ROS_DISTRO/setup.bash
-
-mkdir microros_ws
-cd microros_ws
-git clone -b \$ROS_DISTRO \
-https://github.com/micro-ROS/micro_ros_setup.git \
-src/micro_ros_setup
-
-sudo rosdep fix-permissions &&\
-rosdep update &&\
-rosdep install --from-paths src --ignore-src -y
-
-colcon build
-. ./install/local_setup.bash
-
-ros2 run micro_ros_setup create_firmware_ws.sh generate_lib
-\end{minted}
-\end{tcolorbox}
+% docker exec -it ros_build bash
+% \end{minted}
+% \end{tcolorbox}
 
 
-From there we will need some configuration files specifically for
-our Cortex R5F. Both configuration files\footnote{Both files are also visible in the appendixes \ref{sec:toolchainsettings} and \ref{sec:colconsettings} at the end of this report.} will be downloaded from my repository;
-we also are going to copy the cross-compiler into the microros workspace,
-then we can build the library with the following ros2 command:
-\begin{tcolorbox}
-\begin{minted}{sh}
-wget https://gitlab.com/sunoc/xilinx-kria-kv260-\
-documentation/-/raw/main/src/custom_r5f_toolchain.cmake
+% Now we are in the ROS2 container, we can build the micro-ROS firmware as presented in the \href{https://micro.ros.org/docs/tutorials/advanced/create\_custom\_static\_library}{dedicated micro-ROS guide}:
+% \begin{tcolorbox}
+% \begin{minted}{sh}
+% sudo apt update && \
+% sudo apt-get -y install python3-pip \
+%                         wget \
+%                         nano
+% \end{minted}
+% \end{tcolorbox}
 
-wget https://gitlab.com/sunoc/xilinx-kria-kv260-\
-documentation/-/raw/main/src/custom_r5f_colcon.meta
+% \begin{tcolorbox}
+% \begin{minted}{sh}
+% . /opt/ros/\$ROS_DISTRO/setup.bash
 
-cp -r /armr5-toolchain/ \$(pwd)/firmware/toolchain && \
-export PATH=\$PATH:\$(pwd)/firmware/toolchain/bin
+% mkdir microros_ws
+% cd microros_ws
+% git clone -b \$ROS_DISTRO \
+% https://github.com/micro-ROS/micro_ros_setup.git \
+% src/micro_ros_setup
 
-ros2 run micro_ros_setup build_firmware.sh \
-\$(pwd)/custom_r5f_toolchain.cmake \$(pwd)/\
-custom_r5f_colcon.meta
+% sudo rosdep fix-permissions &&\
+% rosdep update &&\
+% rosdep install --from-paths src --ignore-src -y
 
-exit
+% colcon build
+% . ./install/local_setup.bash
 
-\end{minted}
-\end{tcolorbox}
+% ros2 run micro_ros_setup create_firmware_ws.sh generate_lib
+% \end{minted}
+% \end{tcolorbox}
+
+
+% From there we will need some configuration files specifically for
+% our Cortex R5F. Both configuration files\footnote{Both files are also visible in the appendixes \ref{sec:toolchainsettings} and \ref{sec:colconsettings} at the end of this report.} will be downloaded from my repository;
+% we also are going to copy the cross-compiler into the microros workspace,
+% then we can build the library with the following ros2 command:
+% \begin{tcolorbox}
+% \begin{minted}{sh}
+% wget https://gitlab.com/sunoc/xilinx-kria-kv260-\
+% documentation/-/raw/main/src/custom_r5f_toolchain.cmake
+
+% wget https://gitlab.com/sunoc/xilinx-kria-kv260-\
+% documentation/-/raw/main/src/custom_r5f_colcon.meta
+
+% cp -r /armr5-toolchain/ \$(pwd)/firmware/toolchain && \
+% export PATH=\$PATH:\$(pwd)/firmware/toolchain/bin
+
+% ros2 run micro_ros_setup build_firmware.sh \
+% \$(pwd)/custom_r5f_toolchain.cmake \$(pwd)/\
+% custom_r5f_colcon.meta
+
+% exit
+
+% \end{minted}
+% \end{tcolorbox}
 
 % % ------------------------------------------------------------------------------
 % \section{Vitis IDE}
