--- a/README.org
+++ b/README.org
@@ -587,7 +587,7 @@ captions.
 #+CAPTION: here we go with "OpenAMP echo-test" since we want to
 #+CAPTION: have some simple try of the RPMsg system. Finish.
 #+NAME: fig:project7
-[[file:./img/vitis_new/project7.png]]
+file:./img/vitis_new/project7.png
 
 #+LATEX: \pagebreak
 In the Xilinx documentation, it is made mention of the addresses setting that should be checked in the ~script.ld~ file.
@@ -601,6 +601,32 @@ work for the example we are running:
   psu_r5_tcm_ram_1_S_AXI_BASEADDR    0x00020000	
 #+END_SRC
 
+** Enabling the Stream Buffer system
+This is a subpart in the general configuration in the project related to some specific
+functions for FreeRTOS threads messaging system, however, this point in particular
+created so much pain I needed to include in early in this guide for not to forget about it
+and keeping a clear track on how to enable this setting.
+
+Indeed, two settings need to be enabled in order to be able to call
+functions such as ~xMessageBufferCreate~, useful when working with tasks
+in FreeRTOS, as visible in the figure [[fig:streambuffer]] below:
+
+#+ATTR_LATEX: :width .8\textwidth
+#+CAPTION: Enableling Stream Buffer in the Vitis IDE setting: this is a setting that can
+#+CAPTION: be found in the "platform.spr" element of your project (the platform, not the firmware
+#+CAPTION: project itself). From that file, you can access the settings with the button "Modify BSP Settings",
+#+CAPTION: and then as visible, in the tab ~freertos10_xilinx~, it is needed to toggle
+#+CAPTION: here the ~stream_buffer~ setting
+#+CAPTION: in the ~kernel_features~, from the default "false" to "true".
+#+NAME: fig:streambuffer
+[[file:./img/streambuffer.png]]
+
+#+LATEX: \pagebreak
+The second setting is useful in the case when a buffer callback function is used, such as\\
+~xMessageBufferCreateWithCallback~.
+In that case, you must include ~#define configUSE_SB_COMPLETED_CALLBACK 1~ on the top of you header
+file (in our project, this will happen in the ~microros.h~ header file),
+before the ~#include "FreeRTOS.h"~ in order to override the setting from this include.
 
 
 #+LATEX: \pagebreak
@@ -664,7 +690,7 @@ then passed as a parameter when creating the Docker container:
   --privileged ros:iron
 #+END_SRC
 
-Now the container named "ros build" was created, it is possible to "enter" it, and having access
+Now the container named ~ros_build~ was created, it is possible to "enter" it, and having access
 to the tools in it by running the following command that will open a ~bash~ shell in said container:
 #+BEGIN_SRC sh
   docker exec -it ros_build bash
@@ -716,7 +742,65 @@ then we can build the library with the following ros2 command:
   custom_r5f_colcon.meta
 #+END_SRC
 
-* Adding micro-ROS to the real-time firmware
+* Including micro-ROS to the real-time firmware
+Now we have a Vitis demonstration project available and the ~libmicroros~ static library
+available, we can combine both by including this library into our Kria project.
+
+On the host machine running the IDE, we can download the static library
+and the include files from the Docker builder.
+Here, we assume your Vitis IDE workspace sits in you home directory, at ~~/workspace~,
+and that the Docker container is named ~ros_build~:
+#+BEGIN_SRC sh
+  mkdir /home/$USER/workspace/microros_lib
+
+  docker cp ros_build:/microros_ws/firmware/build/\
+         libmicroros.a /home/$USER/workspace/microros_lib/
+
+  docker cp ros_build:/microros_ws/firmware/build/include \
+         /home/$USER/workspace/microros_lib/
+#+END_SRC
+
+Many parameters are available to be set up in the IDE for the compilation toolchain, but
+the figures [[fig:include]] and [[fig:include2]] below will show you a setup that worked to have the IDE
+to recognize the include files and to be able to use them for compiling the firmware.
+
+#+ATTR_LATEX: :width .6\textwidth
+#+CAPTION: Firstly, in the "C/C++ Build" settings of your firmware project,
+#+CAPTION: under the "Settings" menu, you should find the gcc compiler "Directories".
+#+CAPTION: In here you should add the "include" directory of your library.
+#+CAPTION: Be careful however, if your include files are in a second layer of directory
+#+CAPTION: (as it is the case for libmicroros) you will need to include each sub-directory individually,
+#+CAPTION: as visible in this figure.
+#+NAME: fig:include
+[[file:./img/vitis_new/include.png]]
+
+#+ATTR_LATEX: :width .6\textwidth
+#+CAPTION: Secondly, in the gcc linkers "Libraries", you can add the top level directory of your library.
+#+CAPTION: In our case, it is the directory that contains both the "include" directory added earlier,
+#+CAPTION: and also the "libmicroros.a" file.
+#+NAME: fig:include2
+[[file:./img/vitis_new/include2.png]]
+
+#+LATEX: \pagebreak
+With both of these setup in your project and as a minimal test to see if the setup was made correctly,
+you should be able to include the following micro-ROS libraries into your project:
+#+BEGIN_SRC C
+  #include <rcl/rcl.h>
+  #include <rcl/error_handling.h>
+  #include <rclc/rclc.h>
+  #include <rclc/executor.h>
+#+END_SRC
+
+The details for the inclusions and the use-case of the library will depend on the implementation
+of the firmware itself.
+
+But in general, as the firmware is successfully built and an ~.elf~ file is available and can be uploaded as a
+firmware to the Kria board (or any remote server accessible through ~SSH~, for that matter) with the following
+command[fn:10]:
+#+BEGIN_SRC sh
+  scp /home/sunoc/workspace/rpmsg_pingpong_microros_lib/\
+      Debug/rpmsg_pingpong_microros_lib.elf  ubuntu@192.168.1.10:/home/ubuntu/
+#+END_SRC
 
 * Loading the firmware 
 
@@ -790,6 +874,12 @@ This file is available in this repository: [[https://gitlab.com/sunoc/xilinx-kri
 #+END_SRC
 
 * Footnotes
+
+[fn:10] Note that in that case, we are retrieving the binary for a project
+named ~rpmsg_pingpong_microros_lib~.
+You own path will vary depending on how your project was named in the first place.
+Obviously, the ~SSH~ connection parameters will also be specific to your case.
+The ~ubuntu@192.168.1.10~ set here are merely an example.
 
 [fn:9] Both files are also visible in the appendixes [[Custom toolchain CMake settings]]
 and [[Custom Colcon meta settings]] the end of this report.} 
